# cpplab2

./: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Person.cpp  Person.h  README.md  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
lab10/: CMakeLists.txt
lab10/src/: main.cpp
lab11/: CMakeLists.txt
lab11/src/: Bufor.cpp  Bufor.h  BuforArr.cpp  BuforArr.h  BuforFile.cpp  BuforFile.h  Elem.h  Person.h  main.cpp
lab12/src/: Car.cpp  Car.h
lab2/: Bufor.cpp  Bufor.h  Circle.cpp  Circle.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Figure.cpp  Figure.h  MaxBufor.cpp  MaxBufor.h  MeanBufor.cpp  MeanBufor.h  Square.cpp  Square.h  TeamLeader.cpp  TeamLeader.h  main.cpp
lab3/: CMakeLists.txt
lab3/src/: Adding.h  Array.h  Student.h  main.cpp
lab4/: CMakeLists.txt
lab4/src/: Citizen.cpp  Citizen.h  City.cpp  City.h  main.cpp
lab5/: CMakeLists.txt
lab5/src/: Dictionary.cpp  Dictionary.h  main.cpp
lab6/: CMakeLists.txt
lab6/src/: Contact.h  ContactBook.cpp  ContactBook.h  Person.h  main.cpp
lab7/: CMakeLists.txt
lab7/src/: Kartoteka.cpp  Kartoteka.h  Student.cpp  Student.h  main.cpp
